bjs2-35987 : Исправления Изменена реализация метод collectFood (После изменения реализации, остались не используемые методы. удалил) Удален модификатор static у полей в классе House Удален модификатор synchronized у методов в классе Room