@@ -2,7 +2,9 @@ package tasks.bjs2_35987;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.LinkedList;
 import java.util.List;
+import java.util.Queue;
 import java.util.Random;
 import java.util.concurrent.Executors;
 import java.util.concurrent.ScheduledExecutorService;
@@ -11,48 +13,57 @@ import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 public class House {
-    private static Random random = new Random();
-    private static final List<Room> rooms = generatorRooms();
-    private static final int THREAD_COUNT = 5;
-    private static List<Food> collectedFoods = new ArrayList<>();
-    private static ScheduledExecutorService executor = Executors.newScheduledThreadPool(THREAD_COUNT);
+    private Random random = new Random();
+    private final List<Room> rooms = generatorRooms();
+    private final int THREAD_COUNT = 5;
+    private final int ROOMS_PER_THREAD = 3;
+    private List<Food> collectedFoods = new ArrayList<>();
+    private ScheduledExecutorService executor = Executors.newScheduledThreadPool(THREAD_COUNT);
 
     public static void main(String[] args) {
-        System.out.println(rooms);
+        House house = new House();
+        Queue<Room> queueRooms = new LinkedList<>(house.rooms);
 
-        for(int i = 0; i < THREAD_COUNT; i++) {
-            executor.scheduleAtFixedRate(House::collectFood, 1, 3, TimeUnit.SECONDS);
+        for (int i = 0; i < house.THREAD_COUNT; i++) {
+            house.executor.scheduleAtFixedRate(() -> house.collectFood(queueRooms), 1, 3, TimeUnit.SECONDS);
+        }
+
+        try {
+            if (house.executor.awaitTermination(5, TimeUnit.MINUTES)) {
+                System.out.println("Все продукты собраны");
+            } else {
+                System.out.println("Превышено время обработки задачи. Все потоки будут остановлены принудительно");
+                house.executor.shutdownNow();
+            }
+        } catch (InterruptedException e) {
+            System.out.println("В процессе выполнения задачи произошла ошибка : " + e.getMessage());
+            System.out.println("Все потоки будут остановлены принудительно");
+            house.executor.shutdownNow();
         }
     }
 
-    private static void collectFood() {
-        if (isRoomsWithoutFoods()) {
-            System.out.println("В доме больше нет комнат с продуктами");
+    private void collectFood(Queue<Room> queueRooms) {
+        String threadName = Thread.currentThread().getName();
+        List<Room> rooms = getRoomsFromQueue(queueRooms);
 
-            if (!executor.isShutdown()) {
-                executor.shutdown();
-                System.out.println("Собранные продукты: " + collectedFoods);
-            }
-
+        if (rooms.isEmpty()) {
+            System.out.println(threadName + ". Нету свободных комнат");
+            executor.shutdown();
             return;
         }
 
-        for(Room room : getRoomsForCollectionFood()) {
-            synchronized (room) {
-                if(!room.hasFood()) {
-                    continue;
-                }
+        rooms.forEach(room -> {
+            List<Food> collecteFood = room.collectFoods();
 
-                List<Food> collectFoods = room.collectFoods();
-
-                synchronized (collectedFoods) {
-                    collectedFoods.addAll(collectFoods);
-                }
+            synchronized (collectedFoods) {
+                collectedFoods.addAll(collecteFood);
             }
-        }
+
+            System.out.println(threadName + ". Собрали еду в комнате " + room.getName());
+        });
     }
 
-    private static List<Room> generatorRooms() {
+    private List<Room> generatorRooms() {
         List<Room> rooms = new ArrayList<>();
 
         rooms.add(new Room("Кухня_1", generatorFoods()));
@@ -68,7 +79,7 @@ public class House {
         return rooms;
     }
 
-    private static List<Food> generatorFoods() {
+    private List<Food> generatorFoods() {
         List<String> FOOD_NAMES = Arrays.asList(
             "Яблоко", "Бутерброд", "Пицца", "Чай", "Кофе", "Печенье", "Сыр", "Колбаса", "Хлеб"
         );
@@ -85,14 +96,13 @@ public class House {
         return foods;
     }
 
-    private static List<Room> getRoomsForCollectionFood() {
-        return rooms.stream()
-            .filter(Room::hasFood)
-            .limit(2)
-            .collect(Collectors.toList());
-    }
-
-    private static boolean isRoomsWithoutFoods() {
-        return rooms.stream().filter(Room::hasFood).count() == 0;
+    private List<Room> getRoomsFromQueue(Queue<Room> queueRooms) {
+        synchronized (queueRooms) {
+            return IntStream
+                .range(0, ROOMS_PER_THREAD)
+                .mapToObj(i -> queueRooms.poll())
+                .filter(room -> room != null)
+                .toList();
+        }
     }
 }
